Implemented graceful shutdown and Healthcheck.
