# public/swagger.json
@@ -205,6 +205,26 @@
 				"security": [],
 				"parameters": []
 			}
+		},
+		"/health": {
+			"get": {
+				"operationId": "Health",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {}
+							}
+						}
+					}
+				},
+				"tags": [
+					"health"
+				],
+				"security": [],
+				"parameters": []
+			}
 		}
 	},
 	"servers": [
